--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3213,12 +3213,16 @@ en:
   javascript:
     bikes_search:
       abandoned: Abandoned
+      absent: Absent
       color: Color
+      hidden: Hidden
       location: Location
       registry: Registry
       registry_id: Registry ID
       serial: Serial
       stolen: Stolen
+      unknown: Unknown
+      unknown_brand: Unknown Brand
   landing_pages:
     ambassadors_current:
       after_a_couple_of_recoveries_i_got_hooked: >-
