Externalize strings from bikes search page components

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3210,6 +3210,15 @@ en:
       signup_page: signup page
       us_partner_organizations: US Partner organizations
       website_for_organization: "%{org_name} website"
+  javascript:
+    bikes_search:
+      abandoned: Abandoned
+      color: Color
+      location: Location
+      registry: Registry
+      registry_id: Registry ID
+      serial: Serial
+      stolen: Stolen
   landing_pages:
     ambassadors_current:
       after_a_couple_of_recoveries_i_got_hooked: >-
