Add Stripe form

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4577,10 +4577,12 @@ en:
     form:
       501c3_nonprofit: 501(c)(3) nonprofit
       bike_index_is_a_nonprofit_html: Bike Index is a %{nonprofit_link}.
+      donate_to_bike_index: Donate to Bike Index
       donate_today: Donate today
       next: next  >
       other_amount: Other amount
       pay_bike_index: Pay Bike Index
+      payment_to_bike_index: Payment to Bike Index
       select_an_amount: Select an amount
   plan_features:
     add_form_fields: Add specific form fields to your landing page
