--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1015,6 +1015,7 @@ en:
         We've found targeted sharing on social media to have a <em>huge</em> effect
         on recovering stolen bikes.
     edit_alert_purchase:
+      bike_index_promoted_alert: Bike Index Promoted Alert
       cancel: Cancel
       charge: 'Charge: %{price}'
       confirm: Confirm
