--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1015,6 +1015,7 @@ en:
         We've found targeted sharing on social media to have a <em>huge</em> effect
         on recovering stolen bikes.
     edit_alert_purchase:
+      bike_index_promoted_alert: Bike Index Promoted Alert
       cancel: Cancel
       charge: 'Charge: %{price}'
       confirm: Confirm
@@ -4577,10 +4578,12 @@ en:
     form:
       501c3_nonprofit: 501(c)(3) nonprofit
       bike_index_is_a_nonprofit_html: Bike Index is a %{nonprofit_link}.
+      donate_to_bike_index: Donate to Bike Index
       donate_today: Donate today
       next: next  >
       other_amount: Other amount
       pay_bike_index: Pay Bike Index
+      payment_to_bike_index: Payment to Bike Index
       select_an_amount: Select an amount
   plan_features:
     add_form_fields: Add specific form fields to your landing page
