--- a/config/locales/translation.nl.yml
+++ b/config/locales/translation.nl.yml
@@ -5479,6 +5479,7 @@ nl:
     recovery_display:
       bike: Fiets
       recovered_date: hersteld %{date}
+      translated_from_english: vertaald uit het Engels
   stolen:
     index:
       ambassador: Ambassadeur
