--- a/config/locales/translation.nl.yml
+++ b/config/locales/translation.nl.yml
@@ -988,6 +988,11 @@ nl:
         two_u_locks: Twee U-sloten
         u_lock: Beugelslot
         u_lock_and_cable: U-slot en kabel
+      organization:
+        reg_affiliation_options:
+          community_member: Gemeenschap lid
+          employee: Werknemer
+          student: Student
   datetime:
     distance_in_words:
       half_a_minute: een halve minuut
@@ -1643,6 +1648,9 @@ nl:
           in de verfbeschrijving plaatsen (nadat u zich hebt geregistreerd), <em>dit</em>
           is om een algemene kleur te krijgen om het zoeken te vergemakkelijken
         remove_color: Verwijder kleur
+        primary_frame_color: Primaire framekleur
+        secondary_frame_color: Secundaire framekleur
+        tertiary_frame_color: Tertiaire framekleur
       revised_component_fields:
         component_type: Component type
         model: Model
@@ -1933,6 +1941,7 @@ nl:
       without_serial_number: Deze %{bike_type} is gemaakt zonder framenummer
       your_full_address_is_required: Uw volledige adres is vereist door %{org_name}
       zipcode: Postcode
+      manufacturer: Fabrikant
     organized_access_panel:
       access_panel: Toegangspaneel
       additional_message: Extra bericht
@@ -5328,7 +5337,7 @@ nl:
       bike_manufacturer: fietsfabrikant
       choose_specific_organization_optional: Kies specifieke organisatie (optioneel)
       owner_email: "%{owner} e-mail"
-      primary_frame_color: primaire framekleur
+      primary_frame_color: Primaire framekleur
       register: Registreer
       select_other_if_manufacturer_doesnt_show: Selecteer 'Overig' als de fabrikant
         niet verschijnt wanneer deze wordt ingevoerd
