--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1292,6 +1292,8 @@ en:
       owner_name: Owner name
       permission: Permission
       registered: 'Registered:'
+      organization_registered: Organization
+      organization_child: Child organization
       send: Send
       send_message: Send message
       sticker: Sticker
@@ -2069,7 +2071,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    - 
+    -
     - Jan
     - Feb
     - Mar
@@ -2095,7 +2097,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    - 
+    -
     - January
     - February
     - March
