--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -721,6 +721,8 @@ en:
         cargo_trike_rear: Cargo Tricycle (rear storage)
         pedi_cab: Pedi Cab (rickshaw)
         penny_farthing: Penny Farthing
+        personal_mobility: Personal mobility device (electric scooter, skateboard,
+          unicycle, etc)
         recumbent: Recumbent
         stroller: Stroller
         tall_bike: Tall Bike
@@ -730,7 +732,6 @@ en:
         tricycle: Tricycle
         unicycle: Unicycle
         wheelchair: Wheelchair
-        personal_mobility: Personal mobility device (electric scooter, skateboard, unicycle, etc)
       frame_material:
         aluminum: Aluminum
         composite: Carbon or composite
@@ -2070,7 +2071,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    -
+    - 
     - Jan
     - Feb
     - Mar
@@ -2096,7 +2097,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    -
+    - 
     - January
     - February
     - March
