--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -721,6 +721,8 @@ en:
         cargo_trike_rear: Cargo Tricycle (rear storage)
         pedi_cab: Pedi Cab (rickshaw)
         penny_farthing: Penny Farthing
+        personal_mobility: Personal mobility device (electric scooter, skateboard,
+          unicycle, etc)
         recumbent: Recumbent
         stroller: Stroller
         tall_bike: Tall Bike
