Add city to edit_bike_details form

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1047,6 +1047,7 @@ en:
       bike_name: Bike Name
       choose_country: Choose country
       choose_material: Choose material
+      city: City
       existing_stickers: Existing stickers
       frame_size: Frame size
       general_description: General description
