--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -772,7 +772,10 @@ en:
         impound_record:
           user_not_authorized: does not have permission to impound this bike
         manufacturer:
-          cannot_match_a_color_name: Cannot be the same as a color name
+          cannot_match_a_color_name: cannot be the same as a color name
+        organization:
+          cannot_be_regional_and_belong_to_one: cannot be a regional org and also
+            belong to one.
         organization_message:
           latlon_required: latitude and longitude required
           required: required
@@ -1042,7 +1045,9 @@ en:
       a_qr_sticker: a QR Sticker
       add_a_sticker_label_html: Add %{sticker_information_link}
       bike_name: Bike Name
+      choose_country: Choose country
       choose_material: Choose material
+      city: City
       existing_stickers: Existing stickers
       frame_size: Frame size
       general_description: General description
