--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1833,9 +1833,13 @@ en:
           it, upload photos and make sure you never lose track of your trusty steed!
     bike_possibly_found_email:
       html:
+        bike: 'Bike:'
+        bike_registry: 'Bike Registry:'
         check_out_match_here: 'Check out the match here:'
         we_think_your_stolen_bike_html: We may have found your stolen <strong>%{bike_title}</strong>!
       text:
+        bike: 'Bike:'
+        bike_registry: 'Bike Registry:'
         check_out_match_here: 'Check out the match here:'
         we_think_your_stolen_bike: We may have found your stolen %{bike_title}!
     confirmation_email:
