--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5212,6 +5212,7 @@ en:
       youve_been_logged_out: You've been logged out
     index:
       alert_the_community: Alert the Community
+      annual_giving_campaign: Annual Giving Campaign
       bike_index_statistics: Bike Index statistics
       bikes_registered_this_week: Bikes registered this week
       but_how_does_it_work: But How Does it work?
@@ -5226,6 +5227,10 @@ en:
       if_your_bike_goes_missing: >-
         If your bike goes missing, mark it as lost or stolen to notify the entire
         Bike Index community and its partners.
+      is_a_nonprofit_html: >-
+        Bike Index is a %{blog_link}<br>Support our non-profit effort to fight bike
+        theft!
+      nonprofit_501c3: 501(c)(3) nonprofit
       partner_organizations: Partner Organizations
       read_more_recovery_stories: Read more recovery stories
       recover_your_bike_for_free: >-
@@ -5234,6 +5239,7 @@ en:
         we do.
       register_now: Register now!
       register_your_bike: Register Your Bike
+      skip: Skip
       stolen_bikes_recovered: Stolen Bikes Recovered
       stolen_bikes_registered: Stolen Bikes Registered
       the_community_responds: The community responds
@@ -5241,6 +5247,7 @@ en:
       total_recovery_value: Total Recovery value
       used_by: Used By
       value_of_bikes_recovered: Over %{value} Worth of Bikes Recovered
+      we_rely_on_your_contributions: We rely on your donations to support our efforts!
       you_get_your_bike_back: You Get your Bike Back
     recovery_stories:
       recovery_stories: Recovery Stories
