--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -2071,7 +2071,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    - 
+    -
     - Jan
     - Feb
     - Mar
@@ -2097,7 +2097,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    - 
+    -
     - January
     - February
     - March
@@ -5242,7 +5242,7 @@ en:
         we do.
       register_now: Register now!
       register_your_bike: Register Your Bike
-      skip: Skip
+      skip: No donation
       stolen_bikes_recovered: Stolen Bikes Recovered
       stolen_bikes_registered: Stolen Bikes Registered
       the_community_responds: The community responds
