Easier to close modal (#1434)

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -5242,7 +5242,7 @@ en:
         we do.
       register_now: Register now!
       register_your_bike: Register Your Bike
-      skip: Skip
+      skip: No donation
       stolen_bikes_recovered: Stolen Bikes Recovered
       stolen_bikes_registered: Stolen Bikes Registered
       the_community_responds: The community responds
